2012-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Addmissing assignment to machine.
	Reported by: Eriks Latosheks <foresterlv>.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Network): Update instructions on generating netboot
	image.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c (grub_cmd_cryptomount): Strip brackets
	around device name if necessarry.

2012-12-10  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* util/grub-install.in: Follow the symbolic link parameter added
	to the file command.

2012-12-10  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install.in: Remove stale TODO.

2012-12-10  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* grub-core/kern/ieee1275/init.c (grub_machine_get_bootlocation): Use
	dynamic allocation for the bootpath buffer.

2012-12-10  Dr. Tilmann Bubeck <t.bubeck@reinform.de>

	* grub-core/gfxmenu/view.c (init_terminal): Avoid making terminal
	window too small.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Get font as
	argument rather than font name. All users updated.
	(grub_gfxterm_set_window): Likewise.

2012-12-10  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* util/grub-mkfont.c (argp_parser): Fix a typo which prevented --asce
	from working.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk): Support
	nbd disks.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_dir): Stop if direntlen is 0 to avoid
	infinite loop on corrupted FS.

2012-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix big-endian mtime.

	* grub-core/fs/ufs.c (grub_ufs_inode): Split improperly attached
	together sec and usec.
	(grub_ufs_dir): Use correct byteswapping for UFS time.

2012-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Support big-endian UFS1.
