@@ -1,3 +1,11 @@
+2012-12-28  Colin Watson  <cjwatson@ubuntu.com>
+
+	Backport gnulib fixes for C11.  Fixes Savannah bug #37738.
+
+	* grub-core/gnulib/stdio.in.h (gets): Warn on use only if
+	HAVE_RAW_DECL_GETS.
+	* m4/stdio_h.m4 (gl_STDIO_H): Check for gets.
+
 2012-12-11  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* util/grub.d/20_linux_xen.in: Addmissing assignment to machine.
